# Muratura

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_FLOW_STANDARDIZATION.md  Dockerfile  FAKE_DATA_AUDIT.md  GETTING_STARTED.md  GUI_IMPLEMENTATION_COMPLETE.md  GUI_REAL_IMPLEMENTATION.md  LICENSE  MAPPA_PROGETTO.md  README.md  RELEASE_NOTES_v7.0.0-alpha.md  WORKFLOW_COMPLETE.md  avvia_gui.bat  check_mcp.py  connector.py  gui_editor.py  gui_editor_v2.py  install.sh  mcp_server_muratura.py  pyproject.toml  requirements.txt  run_debug.py  run_gui.py  setup.py  test_bad_format.csv  test_coordinates.csv  test_csv_import.py  test_gui_auto.py  test_gui_features.py  test_installazione.py  test_mcp_local.py  test_remote_control.py
.claude/: RALPH_PROMPT.md  ralph-loop.local.md
Material/: DATA_TYPES_DOCUMENTATION.md  WIRE_EDITOR_UNIFIED_README.md  __init__.py  data_standardizer.py  dsl_parser.py  engine.py  enums.py  geometry.py  materials.py  optimizations.py  utils.py  wire_editor.py  wire_editor_unified.py
benchmarks/: benchmark_performance.py
bim/: __init__.py  components.py  ifc_export.py
config/: defaults.yaml
docs/: COMMERCIAL_FEATURES_ANALYSIS.md  PHASE_2_HISTORIC_BUILDINGS_PLAN.md  PHASE_3_BIM_REPORTS_PLAN.md  PROJECT_COMPLETE_SUMMARY.md  SESSION_SUMMARY_2025-11-14.md
examples/: 01_pushover_simple.py  02_modal_analysis.py  03_sam_verification.py  04_floor_design.py  05_balcony_design.py  06_stair_design.py  07_arch_analysis.py  08_vault_analysis.py  09_strengthening_design.py  10_knowledge_levels.py  11_ifc_import_bim.py  12_report_generation.py  13_custom_templates.py  14_ifc_workflow_complete.py  15_complete_workflow_integration.py  Nuovo Progetto.mur  README.md  edificio_coordinate.mur  esempio_edificio.mur  example_01_basic_sam.py  example_02_pushover.py  export_test.mur  test_output.mur
muratura/: __init__.py  constitutive.py  engine.py  materials.py  wire_editor.py  wire_editor1.py
rendering/: __init__.py  canvas_gl.py  gl_renderer.py  vista3d_gl.py
tests/: __init__.py  test_arches.py  test_balconies.py  test_engine.py  test_floors.py  test_geometry.py  test_ifc_export.py  test_ifc_import.py  test_knowledge_levels.py  test_materials.py  test_stairs.py  (+3 more)
(+58 files in other folders)
